--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script data-ad-client="ca-pub-5935088297733567" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>Hi this Dharmendra, whats up</p>
