--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <ul class="menu-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Category</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Testimonial</a></li>
+                <li><a href="#">Donation</a></li>
+                <li><a href="#">Content</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <h1 class="logo">Navbar</h1>
