--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-                <li><a href="#">Home</a></li>
+                <li><a href="edu/index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Donation</a></li>
                 <li><a href="#">Content</a></li>
