--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>CodePen - Responsive Navbar (HTML And CSS)</title>
   <link rel="stylesheet" href="./style.css">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7938732448567128"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
