--- a/edu/index.html
+++ b/edu/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html >
 	<head>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7938732448567128"
+     		crossorigin="anonymous"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="shortcut icon" href="img/fav.png">
 		<meta charset="UTF-8">
