--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive Navbar (HTML And CSS)</title>
+  <title>Dharmendra kumar shila</title>
   <link rel="stylesheet" href="./style.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7938732448567128"
      crossorigin="anonymous"></script>
